--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script>main.js</script>
+<script src="main.js"></script>
+<script src="main.bat"></script>
     <link rel="stylesheet" href="style.css">
 </body>
 </html>
