--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <base target="_blank">
 </head>
 
 <body>
-    <div class="hello">
-        
+    <div class="my_repo">
+        <img class="qrcode" src="img/site_01/mysite.png" alt="">
+        <a href="https://alex9600t.github.io/link/">
+            <h3>простой сайт с моими ссылками</h3>
+            <iframe class="screen" src="https://alex9600t.github.io/link/" width="400" height="600" frameborder="50"></iframe>
+        </a>
+
+        <a href="https://github.com/alex9600t/link">
+            <img src="https://github-readme-stats.vercel.app/api/pin/?username=Alex9600t&repo=link&theme=dark"
+                alt="repo">
+        </a>
     </div>
 
-    <div id="terminal"></div> 
-    br
+    <div id="terminal"></div>
 
     <script src="main.js"></script>
 </body>
