--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 alt="repo">
         </a>
     </div>
+    <div class="discord">
+        <iframe src="https://discord.com/widget?id=1201682152568401991&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    </div>
 
     <div id="terminal"></div>
 
