--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Bduidan</title>
     <link rel="stylesheet" href="style.css">
     <base target="_blank">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9989170290829956"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -31,6 +33,7 @@
     <script src="main.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9989170290829956"
      crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
