--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Bduidan</title>
     <link rel="stylesheet" href="style.css">
     <base target="_blank">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9989170290829956"
-     crossorigin="anonymous"></script>
+    <!-- Yandex.RTB -->
+    <script>window.yaContextCb=window.yaContextCb||[]</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script>
 </head>
 
 <body>
@@ -31,8 +32,16 @@
     <div id="terminal"></div>
 
     <script src="main.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9989170290829956"
-     crossorigin="anonymous"></script>
+    <!-- Yandex.RTB R-A-7542515-1 -->
+    <div id="yandex_rtb_R-A-7542515-1"></div>
+    <script>
+    window.yaContextCb.push(()=>{
+	    Ya.Context.AdvManager.render({
+	    	"blockId": "R-A-7542515-1",
+	    	"renderTo": "yandex_rtb_R-A-7542515-1"
+	    })
+    })
+</script>
     
 </body>
 
