--- a/index.html
+++ b/index.html
@@ -1,34 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <base target="_blank">
 </head>
-
 <body>
-    <div class="my_repo">
-        <img class="qrcode" src="img/site_01/mysite.png" alt="">
-        <a href="https://alex9600t.github.io/link/">
-            <h3>простой сайт с моими ссылками</h3>
-            <iframe class="screen" src="https://alex9600t.github.io/link/" width="400" height="600" frameborder="50"></iframe>
-        </a>
-
-        <a href="https://github.com/alex9600t/link">
-            <img src="https://github-readme-stats.vercel.app/api/pin/?username=Alex9600t&repo=link&theme=dark"
-                alt="repo">
-        </a>
-    </div>
-    <div class="discord">
-        <iframe src="https://discord.com/widget?id=1201682152568401991&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-    </div>
-
-    <div id="terminal"></div>
-
-    <script src="main.js"></script>
+    <p>
+        Hello! 
+    </p>
+    <p>
+        Welcome to the general site
+    </p>
 </body>
-
 </html>
