--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </p>
     <p>
         Welcome to the general site
+            <iframe width="200px" height="509px" src="https://bduidan.ru" frameborder="0"></iframe>
     </p>
 </body>
 </html>
